--- a/assets/css/beautifuljekyll.css
+++ b/assets/css/beautifuljekyll.css
@@ -944,35 +944,47 @@ pre {
 }
 
 /* --- Notification boxes --- */
-.box-note,
-.box-warning,
-.box-error,
-.box-success {
+.box-def,
+.box-lem,
+.box-prop,
+.box-thm,
+.box-rem,
+.box-cor {
   padding: 0.9375rem 0.9375rem 0.9375rem 0.625rem;
   margin: 1.25rem 1.25rem 1.25rem 0.3125rem;
-  border: 1px solid #eee;
+  border: 1px solid #aaa;
   border-left-width: 0.3125rem;
   border-radius: 0.3125rem 0.1875rem 0.1875rem 0.3125rem;
 }
 
-.box-note {
-  background-color: #eee;
-  border-left-color: #2980b9;
+.box-def {
+  background-color: #fafafa;
+  border-left-color: gray;
 }
 
-.box-warning {
-  background-color: #fdf5d4;
-  border-left-color: #f1c40f;
+.box-lem {
+  background-color: #f5fdef;
+  border-left-color: green;
 }
 
-.box-error {
-  background-color: #f4dddb;
+.box-prop {
+  background-color: #f5fdef;
+  border-left-color: green;
+}
+
+.box-thm {
+  background-color: #fff1f0;
   border-left-color: #c0392b;
 }
 
-.box-success {
-  background-color: #98FB98;
-  border-left-color: #3CB371;
+.box-rem {
+  background-color: #fafafa;
+  border-left-color: gray;
+}
+
+.box-cor {
+  background-color: #fff5db;
+  border-left-color: #e7ad01;
 }
 
 /* --- Misc blog post styles --- */
